# cppmatrix

./: .gitignore  CMakeLists.txt  library.cpp  tests.cpp
include/: ndarray.h
tests/: ndarray.cpp
